<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_root"
    tools:context=".home.auth.RegisterFragment">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-26dp"
        android:layout_marginBottom="-68dp"
        android:background="@drawable/bglogin"
        android:contentDescription="@string/image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_location"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaki_keenam"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/segoegold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:fontFamily="@font/segoegold"
            android:text="@string/hi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/silahkan_daftar"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:autofillHints="Name"
            android:background="@drawable/text_field"
            android:fontFamily="@font/segoegold"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/grey_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints="Email Address"
            android:background="@drawable/text_field"
            android:fontFamily="@font/segoegold"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/grey_color"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/name_register"
            app:layout_constraintStart_toStartOf="@+id/name_register"
            app:layout_constraintTop_toBottomOf="@+id/name_register" />

        <EditText
            android:id="@+id/pass_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints="Password"
            android:background="@drawable/text_field"
            android:fontFamily="@font/segoegold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/grey_color"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/email_register"
            app:layout_constraintStart_toStartOf="@+id/email_register"
            app:layout_constraintTop_toBottomOf="@+id/email_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_btn"
            android:fontFamily="@font/segoeui"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/pass_register"
            app:layout_constraintStart_toStartOf="@+id/pass_register"
            app:layout_constraintTop_toBottomOf="@+id/pass_register" />

        <TextView
            android:id="@+id/dont_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/grey_black"
            app:layout_constraintEnd_toStartOf="@+id/login_txt"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn" />

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:text="@string/login"
            android:textColor="@color/grey_black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>